--- a/Tienda/InitializrSpringbootProject/src/main/resources/application.properties
+++ b/Tienda/InitializrSpringbootProject/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 
 storage.location.productos = assets/productos
+spring.servlet.multipart.max-file-size = 100MB
 
 logging.level.org.hibernate.SQL = debug
 logging.level.org.hibernate.type = trace
+
