Carrito de Compras

--- a/Tienda/InitializrSpringbootProject/src/main/resources/application.properties
+++ b/Tienda/InitializrSpringbootProject/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 server.port = 8080
 
+# ZONA HORARIA
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/basededatostiendaonline?serverTimezone=GMT-5&createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = admin
+
+# LOCALIZACION: PERÚ
+spring.web.locale-resolver=fixed
+spring.web.locale=es_PE
+
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
